<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.tjfri.timergame2017.MainActivity">

    <TextView
        android:text="0:00"
        android:id="@+id/currentColorBar"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:textSize="24sp" />

    <android.support.v7.widget.GridLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:rowCount="5"
        app:columnCount="5"
        android:layout_below="@id/currentColorBar"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true">

        <Button
            android:layout_height="wrap_content"
            android:id="@+id/button1"
            android:minHeight="50dp"
            android:minWidth="50dp"
            android:text="@string/_1"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:layout_margin="5dp"
            android:layout_width="wrap_content" />

        <Button
            android:layout_height="wrap_content"
            android:id="@+id/button2"
            android:minHeight="50dp"
            android:minWidth="50dp"
            android:text="@string/_2"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:layout_margin="5dp"
            android:layout_width="wrap_content" />

        <Button
            android:layout_height="wrap_content"
            android:id="@+id/button3"
            android:minHeight="50dp"
            android:minWidth="50dp"
            android:text="@string/_3"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:layout_margin="5dp"
            android:layout_width="wrap_content" />

        <Button
            android:layout_height="wrap_content"
            android:id="@+id/button4"
            android:minHeight="50dp"
            android:minWidth="50dp"
            android:text="@string/_4"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:layout_margin="5dp"
            android:layout_width="wrap_content" />

        <Button
            android:id="@+id/button5"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:minWidth="50dp"
            android:text="@string/_5"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:layout_margin="5dp"
            android:layout_width="wrap_content" />
        <Button
            android:layout_height="wrap_content"
            android:id="@+id/button6"
            android:minHeight="50dp"
            android:minWidth="50dp"
            android:text="@string/_6"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:layout_margin="5dp"
            android:layout_width="wrap_content" />

        <Button
            android:layout_height="wrap_content"
            android:id="@+id/button7"
            android:minHeight="50dp"
            android:minWidth="50dp"
            android:text="@string/_7"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:layout_margin="5dp"
            android:layout_width="wrap_content" />

        <Button
            android:layout_height="wrap_content"
            android:id="@+id/button8"
            android:minHeight="50dp"
            android:minWidth="50dp"
            android:text="@string/_8"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:layout_margin="5dp"
            android:layout_width="wrap_content" />

        <Button
            android:layout_height="wrap_content"
            android:id="@+id/button9"
            android:minHeight="50dp"
            android:minWidth="50dp"
            android:text="@string/_9"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:layout_margin="5dp"
            android:layout_width="wrap_content" />

        <Button
            android:layout_height="wrap_content"
            android:id="@+id/button10"
            android:minHeight="50dp"
            android:minWidth="50dp"
            android:text="@string/_10"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:layout_margin="5dp"
            android:layout_width="wrap_content" />
        <Button
            android:layout_height="wrap_content"
            android:id="@+id/button11"
            android:minHeight="50dp"
            android:minWidth="50dp"
            android:text="@string/_11"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:layout_margin="5dp"
            android:layout_width="wrap_content" />

        <Button
            android:layout_height="wrap_content"
            android:id="@+id/button12"
            android:minHeight="50dp"
            android:minWidth="50dp"
            android:text="@string/_12"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:layout_margin="5dp"
            android:layout_width="wrap_content" />

        <Button
            android:layout_height="wrap_content"
            android:id="@+id/button13"
            android:minHeight="50dp"
            android:minWidth="50dp"
            android:text="@string/_13"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:layout_margin="5dp"
            android:layout_width="wrap_content" />

        <Button
            android:layout_height="wrap_content"
            android:id="@+id/button14"
            android:minHeight="50dp"
            android:minWidth="50dp"
            android:text="@string/_14"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:layout_margin="5dp"
            android:layout_width="wrap_content" />

        <Button
            android:layout_height="wrap_content"
            android:id="@+id/button15"
            android:minHeight="50dp"
            android:minWidth="50dp"
            android:text="@string/_15"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:layout_margin="5dp"
            android:layout_width="wrap_content" />
        <Button
            android:layout_height="wrap_content"
            android:id="@+id/button16"
            android:minHeight="50dp"
            android:minWidth="50dp"
            android:text="@string/_16"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:layout_margin="5dp"
            android:layout_width="wrap_content" />

        <Button
            android:layout_height="wrap_content"
            android:id="@+id/button17"
            android:minHeight="50dp"
            android:minWidth="50dp"
            android:text="@string/_17"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:layout_margin="5dp"
            android:layout_width="wrap_content" />

        <Button
            android:layout_height="wrap_content"
            android:id="@+id/button18"
            android:minHeight="50dp"
            android:minWidth="50dp"
            android:text="@string/_18"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:layout_margin="5dp"
            android:layout_width="wrap_content" />

        <Button
            android:layout_height="wrap_content"
            android:id="@+id/button19"
            android:minHeight="50dp"
            android:minWidth="50dp"
            android:text="@string/_19"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:layout_margin="5dp"
            android:layout_width="wrap_content" />

        <Button
            android:layout_height="wrap_content"
            android:id="@+id/button20"
            android:minHeight="50dp"
            android:minWidth="50dp"
            android:text="@string/_20"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:layout_margin="5dp"
            android:layout_width="wrap_content" />
        <Button
            android:layout_height="wrap_content"
            android:id="@+id/button21"
            android:minHeight="50dp"
            android:minWidth="50dp"
            android:text="@string/_21"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:layout_margin="5dp"
            android:layout_width="wrap_content" />

        <Button
            android:layout_height="wrap_content"
            android:id="@+id/button22"
            android:minHeight="50dp"
            android:minWidth="50dp"
            android:text="@string/_22"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:layout_margin="5dp"
            android:layout_width="wrap_content" />

        <Button
            android:layout_height="wrap_content"
            android:id="@+id/button23"
            android:minHeight="50dp"
            android:minWidth="50dp"
            android:text="@string/_23"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:layout_margin="5dp"
            android:layout_width="wrap_content" />

        <Button
            android:layout_height="wrap_content"
            android:id="@+id/button24"
            android:minHeight="50dp"
            android:minWidth="50dp"
            android:text="@string/_24"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:layout_margin="5dp"
            android:layout_width="wrap_content" />

        <Button
            android:layout_height="wrap_content"
            android:id="@+id/button25"
            android:minHeight="50dp"
            android:minWidth="50dp"
            android:text="@string/_25"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:layout_margin="5dp"
            android:layout_width="wrap_content" />


    </android.support.v7.widget.GridLayout>

</RelativeLayout>
